--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "@datorama/akita": "^4.10.8",
+    "@ngx-formly/core": "^5.5.1",
+    "@ngx-formly/primeng": "^5.5.1",
     "bootstrap": "^4.3.1",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
