--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@datorama/akita": "^4.10.8",
     "@ngx-formly/core": "^5.5.1",
     "@ngx-formly/primeng": "^5.5.1",
+    "angular-in-memory-web-api": "^0.9.0",
     "bootstrap": "^4.3.1",
+    "helpful-decorators": "^2.0.5",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
